--- a/test/config.ini
+++ b/test/config.ini
@@ -9,3 +9,6 @@ PSYTODAY_PAGE = 10
 LIVESC_PAGE = 0 
 SCIENCENEWS_PAGE = 50
 NEUROSCIENCE_PAGE = 10
+
+# Be careful with LIVESC it contains so much links in one page!
+# And you can set SCIENCENEWS_PAGE for much higher value.
