Console Log Update

--- a/test/config.ini
+++ b/test/config.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
 #Path's
-JSON_FILE_PATH = yourdesktopPath/LearnWithArticles/test/data
+JSON_FILE_PATH = C:/Users/ahmet/OneDrive/Desktop/learnwitharticles/test/data
 
 # PAGE VALUES FOR SPIDERS : 
 
