--- a/test/config.ini
+++ b/test/config.ini
@@ -1,15 +1,14 @@
 [DEFAULT]
 #Path's
-JSON_FILE_PATH = yourDesktopPath/LearnWithArticles/test/data
+JSON_FILE_PATH = C:/Users/ahmet/OneDrive/Desktop/learnwitharticles/test/data
 
 # PAGE VALUES FOR SPIDERS : 
 
-BBC_PAGE = 15
-PSYTODAY_PAGE = 5
+BBC_PAGE = 10
+PSYTODAY_PAGE = 0
 LIVESC_PAGE = 1
 SCIENCENEWS_PAGE = 10
-NEUROSCIENCE_PAGE = 5
+NEUROSCIENCE_PAGE = 10
 
 # Be careful with LIVESC it contains so much links in one page!
 # And you can set SCIENCENEWS_PAGE for much higher value.
-# IMPORTANT : Don't give 0 value any spider.
